# dealix

./: .backend-features.json  .claudeignore  .coverage  .dockerignore  .env.example  .env.prod.example  .env.railway.example  .env.staging.example  .gitignore  .gitleaks.toml  .pa11yrc.json  .pre-commit-config.yaml  .spectral.yaml  AGENTS.md  ARCHITECTURE.md  BUSINESS_BUNDLE.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  DAILY_EXECUTION_SCHEDULE_AR.md  DASHBOARD.md  DEALIX_COMPANY_OPERATIONAL_STATE.md  DEALIX_MASTER_STRATEGY_AR.md  DEALIX_READINESS.md  DEALIX_SERVICE_REALITY_AND_TESTING_PROTOCOL_AR.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.company-brain  Dockerfile.watchdog  Dockerfile.web  Dockerfile.worker  HANDOFF_AI_CRO.md  LAUNCH_CHECKLIST_AR.md  LAUNCH_GUIDE_AR.md  LAUNCH_SUMMARY.md  LEAD_INTELLIGENCE_ENGINE_V2_AR.md  LICENSE  (+45 more)
.claude/: settings.json  settings.local.json.example
.devcontainer/: devcontainer.json  docker-compose.yml
.githooks/: post-commit  post-commit.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md
.semgrep/: dealix.yaml
agents/: README.md  architecture.md  metrics.md  observability.md  readiness.md  revenue_os_agent_registry.yaml  risk_model.md  rollback.md
ai_cro/: README.md  test_e2e.py  test_integration.py
alembic/: env.py  script.py.mako
api/: activity-router.ts  booking-router.ts  boot.ts  brain-router.ts  command-room-router.ts  deal-router.ts  dependencies.py  deps.py  finance-router.ts  followup-router.ts  governance-router.ts  health.ts  main.py  middleware.py  proposal-router.ts  prospect-router.ts  router.ts  warroom-router.ts
assets/: Dealix_Logistics_Pitch_AR.pptx
auto_client_acquisition/: INVENTORY.md  company_portal_snapshot.py  consent_table.py  enrichment_provider.py  governed_revenue_ops_diagnostic.py  icp_scorer.py  lead_inbox.py  outreach_sequence.py  outreach_window.py  pipeline.py  revenue_intelligence_founder_hooks.py  risk_score.py  runtime_paths.py  whatsapp_safe_send.py
automation/: README.md
autonomous_growth/: __init__.py  api.py  case_study_pipeline.py  content_calendar.py  distribution_engine.py  orchestrator.py  product_catalog.py  seo_cluster_engine.py  social_proof_aggregator.py
backend/: .env.example  DASHBOARD_API_README.md  Dockerfile  Makefile  README.md  conversation_ai.py  dashboard_api.py  main.py  outreach_engine.py  pyproject.toml  requirements-dev.txt  requirements.txt  whatsapp_webhook.py  whatsapp_webhook_v2.py
business/: BRAND_GUIDELINES.md
capital-assets/: CAPITAL_ASSET_INDEX.json  CAPITAL_ASSET_LIBRARY.md  CAPITAL_ASSET_SCHEMA.md  DOCTRINE_ASSETS.md  HIRING_ASSETS.md  INVESTOR_ASSETS.md  PARTNER_ASSETS.md  PRODUCT_ASSETS.md  SALES_ASSETS.md  TRUST_ASSETS.md
changelogs/: README.md  architecture.md  metrics.md  observability.md  readiness.md  risk_model.md  rollback.md
cli/: __init__.py  dealix_cli.py
clients/: README.md
command_center/: daily_ops.md  founder_dashboard.json  monthly_board.md  qbr_template.md  weekly_exec.md
commercial/: final_enterprise_service_stack.json
company_os/: README.md
compliance/: README.md
connectors/: README.md  base.py  csv_connector.py  email_connector_stub.py  google_places_connector_stub.py  hubspot_connector_stub.py  manual_research_connector.py  normalizer.py  registry.py  source_audit.py  website_signal_analyzer.py  whatsapp_business_connector_stub.py
continuous_improvement/: 30_day_single_workflow_plan.md  README.md  architecture.md  change_management.md  feedback_loop.md  improvement_backlog.md  metrics.md  observability.md  readiness.md  release_process.md  risk_model.md  rollback.md  rollback_policy.md  scorecard.yaml  staged_rollout.md  tests.md
core/: __init__.py  authz.py  feature_flags.py  utils.py  warnings_filter.py
dashboard/: DEPLOY_SUMMARY.md  __init__.py  analytics.py  app.js  app.py  index.html  sample_metrics.json  styles-v2.css  styles.css
data/: anchor_partner_pipeline.json  board_of_directors.json  business_units.json  cap_table.json  capital_asset_index.json  docs_asset_usage_log.json  first_invoice_log.json  founder_command_center_status.json  group_risk_register.json  partner_outreach_log.json  seeded_referrals.json  systems.json  warm_list.csv.template
db/: __init__.py  models.py  models_revenue_events.py  models_workflow_runs.py  rls_policies.py  schema.ts  session.py
dealix/: README.md
dealix_infrastructure/: __init__.py  readiness.py  runtime.py
demos/: README.md  __init__.py  ai_quick_win_demo.py  company_brain_demo.py  revenue_intelligence_demo.py
deploy/: docker-compose.prod.yml
docs/: 14_DAY_FIRST_REVENUE_PLAYBOOK.md  14_SYSTEMS_MAP.md  90_DAY_BUSINESS_EXECUTION_PLAN.md  ACCEPTANCE_REPORT_2026-05-03.md  AGENCY_PARTNER_PITCH.md  AGENCY_PARTNER_PROGRAM.md  AGENT_OS_PROGRAM_ROADMAP.md  AI_INTELLIGENCE_ARCHITECTURE.md  AI_OBSERVABILITY_AND_EVALS.md  ANTI_DUPLICATION_POLICY.md  API.md  API_REALITY_MATRIX.md  ARCHITECTURE_LAYER_MAP.md  B2B_SERVICES_PITCH.md  BACKEND_RELIABILITY_HARDENING_PLAN.md  BEAST_LEVEL_ARCHITECTURE.md  BOARD_DECK_INVESTOR_UPDATES_AR.md  BRAND_PRESS_KIT.md  BUSINESS_KPI_DASHBOARD_SPEC.md  BUSINESS_MODEL_AND_GTM_MASTERPLAN.md  (+299 more)
evals/: README.md  (+19 more)
(+11222 files in other folders)
